@@ -23,9 +23,10 @@ import it.unimi.dsi.fastutil.floats.FloatArrayList;
 import it.unimi.dsi.fastutil.ints.IntArrayList;
 import it.unimi.dsi.fastutil.longs.LongArrayList;
 import it.unimi.dsi.fastutil.objects.ObjectArrayList;
+import java.io.IOException;
+import java.math.BigDecimal;
 import java.sql.Timestamp;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -41,6 +42,7 @@ import org.apache.pinot.common.request.context.predicate.Predicate;
 import org.apache.pinot.common.utils.DataSchema.ColumnDataType;
 import org.apache.pinot.common.utils.config.QueryOptionsUtils;
 import org.apache.pinot.core.common.BlockValSet;
+import org.apache.pinot.core.common.datatable.DataTableBuilder;
 import org.apache.pinot.core.operator.BaseProjectOperator;
 import org.apache.pinot.core.operator.blocks.ValueBlock;
 import org.apache.pinot.core.operator.filter.BaseFilterOperator;
@@ -54,21 +56,18 @@ import org.apache.pinot.core.startree.StarTreeUtils;
 import org.apache.pinot.segment.spi.AggregationFunctionType;
 import org.apache.pinot.segment.spi.SegmentContext;
 import org.apache.pinot.segment.spi.index.startree.AggregationFunctionColumnPair;
+import org.apache.pinot.spi.utils.ByteArray;
 
 
-/**
- * The <code>AggregationFunctionUtils</code> class provides utility methods for aggregation function.
- */
+/// The `AggregationFunctionUtils` class provides utility methods for aggregation function.
 @SuppressWarnings({"rawtypes", "unchecked"})
 public class AggregationFunctionUtils {
   private AggregationFunctionUtils() {
   }
 
-  /**
-   * (For Star-Tree) Creates an {@link AggregationFunctionColumnPair} in stored type from the
-   * {@link AggregationFunction}. Returns {@code null} if the {@link AggregationFunction} cannot be represented as an
-   * {@link AggregationFunctionColumnPair} (e.g. has multiple arguments, argument is not column etc.).
-   */
+  /// (For Star-Tree) Creates an [AggregationFunctionColumnPair] in stored type from the
+  /// [AggregationFunction]. Returns `null` if the [AggregationFunction] cannot be represented as an
+  /// [AggregationFunctionColumnPair] (e.g. has multiple arguments, argument is not column etc.).
   @Nullable
   public static AggregationFunctionColumnPair getStoredFunctionColumnPair(AggregationFunction aggregationFunction) {
     AggregationFunctionType functionType = aggregationFunction.getType();
@@ -86,11 +85,10 @@ public class AggregationFunctionUtils {
     return null;
   }
 
-  /**
-   * Collects all transform expressions required for aggregation/group-by queries.
-   * <p>NOTE: We don't need to consider order-by columns here as the ordering is only allowed for aggregation functions
-   *          or group-by expressions.
-   */
+  /// Collects all transform expressions required for aggregation/group-by queries.
+  ///
+  /// NOTE: We don't need to consider order-by columns here as the ordering is only allowed for aggregation functions
+  ///          or group-by expressions.
   public static Set<ExpressionContext> collectExpressionsToTransform(AggregationFunction[] aggregationFunctions,
       @Nullable List<ExpressionContext> groupByExpressions) {
     Set<ExpressionContext> expressions = new HashSet<>();
@@ -103,21 +101,19 @@ public class AggregationFunctionUtils {
     return expressions;
   }
 
-  /**
-   * Creates a map from expression required by the {@link AggregationFunction} to {@link BlockValSet} fetched from the
-   * {@link ValueBlock}.
-   */
+  /// Creates a map from expression required by the [AggregationFunction] to [BlockValSet] fetched from the
+  /// [ValueBlock].
   public static Map<ExpressionContext, BlockValSet> getBlockValSetMap(AggregationFunction aggregationFunction,
       ValueBlock valueBlock) {
     //noinspection unchecked
     List<ExpressionContext> expressions = aggregationFunction.getInputExpressions();
     int numExpressions = expressions.size();
     if (numExpressions == 0) {
-      return Collections.emptyMap();
+      return Map.of();
     }
     if (numExpressions == 1) {
       ExpressionContext expression = expressions.get(0);
-      return Collections.singletonMap(expression, valueBlock.getBlockValueSet(expression));
+      return Map.of(expression, valueBlock.getBlockValueSet(expression));
     }
     Map<ExpressionContext, BlockValSet> blockValSetMap = new HashMap<>();
     for (ExpressionContext expression : expressions) {
@@ -126,22 +122,19 @@ public class AggregationFunctionUtils {
     return blockValSetMap;
   }
 
-  /**
-   * (For Star-Tree) Creates a map from expression required by the {@link AggregationFunctionColumnPair} to
-   * {@link BlockValSet} fetched from the {@link ValueBlock}.
-   * <p>NOTE: We construct the map with original column name as the key but fetch BlockValSet with the aggregation
-   *          function pair so that the aggregation result column name is consistent with or without star-tree.
-   */
+  /// (For Star-Tree) Creates a map from expression required by the [AggregationFunctionColumnPair] to
+  /// [BlockValSet] fetched from the [ValueBlock].
+  ///
+  /// NOTE: We construct the map with original column name as the key but fetch BlockValSet with the aggregation
+  ///          function pair so that the aggregation result column name is consistent with or without star-tree.
   public static Map<ExpressionContext, BlockValSet> getBlockValSetMap(
       AggregationFunctionColumnPair aggregationFunctionColumnPair, ValueBlock valueBlock) {
     ExpressionContext expression = ExpressionContext.forIdentifier(aggregationFunctionColumnPair.getColumn());
     BlockValSet blockValSet = valueBlock.getBlockValueSet(aggregationFunctionColumnPair.toColumnName());
-    return Collections.singletonMap(expression, blockValSet);
+    return Map.of(expression, blockValSet);
   }
 
-  /**
-   * Reads the intermediate result from the {@link DataTable}.
-   */
+  /// Reads the intermediate result from the [DataTable].
   @Nullable
   public static Object getIntermediateResult(AggregationFunction aggregationFunction, DataTable dataTable,
       ColumnDataType columnDataType, int rowId, int colId) {
@@ -154,6 +147,12 @@ public class AggregationFunctionUtils {
         return dataTable.getDouble(rowId, colId);
       case STRING:
         return dataTable.getString(rowId, colId);
+      case FLOAT:
+        return dataTable.getFloat(rowId, colId);
+      case BIG_DECIMAL:
+        return dataTable.getBigDecimal(rowId, colId);
+      case BYTES:
+        return dataTable.getBytes(rowId, colId);
       case OBJECT:
         CustomObject customObject = dataTable.getCustomObject(rowId, colId);
         return customObject != null ? aggregationFunction.deserializeIntermediateResult(customObject) : null;
@@ -162,9 +161,40 @@ public class AggregationFunctionUtils {
     }
   }
 
-  /**
-   * Reads the final result from the {@link DataTable}.
-   */
+  /// Writes a non-OBJECT intermediate result into the [DataTableBuilder] at the given column.
+  /// Counterpart of [#getIntermediateResult]. OBJECT columns are handled by the caller via
+  /// [AggregationFunction#serializeIntermediateResult], since they need the aggregation function.
+  public static void setIntermediateResult(DataTableBuilder dataTableBuilder, ColumnDataType columnDataType, int colId,
+      Object result)
+      throws IOException {
+    switch (columnDataType) {
+      case INT:
+        dataTableBuilder.setColumn(colId, (int) result);
+        break;
+      case LONG:
+        dataTableBuilder.setColumn(colId, (long) result);
+        break;
+      case FLOAT:
+        dataTableBuilder.setColumn(colId, (float) result);
+        break;
+      case DOUBLE:
+        dataTableBuilder.setColumn(colId, (double) result);
+        break;
+      case BIG_DECIMAL:
+        dataTableBuilder.setColumn(colId, (BigDecimal) result);
+        break;
+      case STRING:
+        dataTableBuilder.setColumn(colId, result.toString());
+        break;
+      case BYTES:
+        dataTableBuilder.setColumn(colId, (ByteArray) result);
+        break;
+      default:
+        throw new IllegalStateException("Illegal column data type in intermediate result: " + columnDataType);
+    }
+  }
+
+  /// Reads the final result from the [DataTable].
   public static Comparable getFinalResult(DataTable dataTable, ColumnDataType columnDataType, int rowId, int colId) {
     switch (columnDataType.getStoredType()) {
       case INT:
@@ -189,17 +219,19 @@ public class AggregationFunctionUtils {
         return FloatArrayList.wrap(dataTable.getFloatArray(rowId, colId));
       case DOUBLE_ARRAY:
         return DoubleArrayList.wrap(dataTable.getDoubleArray(rowId, colId));
+      case BIG_DECIMAL_ARRAY:
+        return ObjectArrayList.wrap(dataTable.getBigDecimalArray(rowId, colId));
       case STRING_ARRAY:
         return ObjectArrayList.wrap(dataTable.getStringArray(rowId, colId));
+      case BYTES_ARRAY:
+        return ObjectArrayList.wrap(dataTable.getBytesArray(rowId, colId));
       default:
         throw new IllegalStateException("Illegal column data type in final result: " + columnDataType);
     }
   }
 
-  /**
-   * Reads the converted final result from the {@link DataTable}. It should be equivalent to running
-   * {@link #getFinalResult} and {@link ColumnDataType#convert}.
-   */
+  /// Reads the converted final result from the [DataTable]. It should be equivalent to running
+  /// [#getFinalResult] and [ColumnDataType#convert].
   public static Object getConvertedFinalResult(DataTable dataTable, ColumnDataType columnDataType, int rowId,
       int colId) {
     switch (columnDataType) {
@@ -230,6 +262,8 @@ public class AggregationFunctionUtils {
         return dataTable.getFloatArray(rowId, colId);
       case DOUBLE_ARRAY:
         return dataTable.getDoubleArray(rowId, colId);
+      case BIG_DECIMAL_ARRAY:
+        return dataTable.getBigDecimalArray(rowId, colId);
       case BOOLEAN_ARRAY: {
         int[] intValues = dataTable.getIntArray(rowId, colId);
         int numValues = intValues.length;
@@ -250,6 +284,8 @@ public class AggregationFunctionUtils {
       }
       case STRING_ARRAY:
         return dataTable.getStringArray(rowId, colId);
+      case BYTES_ARRAY:
+        return dataTable.getBytesArray(rowId, colId);
       default:
         throw new IllegalStateException("Illegal column data type in final result: " + columnDataType);
     }
@@ -280,9 +316,7 @@ public class AggregationFunctionUtils {
     }
   }
 
-  /**
-   * Builds {@link AggregationInfo} for aggregations.
-   */
+  /// Builds [AggregationInfo] for aggregations.
   public static AggregationInfo buildAggregationInfo(SegmentContext segmentContext, QueryContext queryContext,
       AggregationFunction[] aggregationFunctions, @Nullable FilterContext filter, BaseFilterOperator filterOperator,
       List<Pair<Predicate, PredicateEvaluator>> predicateEvaluators) {
@@ -294,14 +328,17 @@ public class AggregationFunctionUtils {
         : buildAggregationInfoWithoutStarTree(segmentContext, queryContext, aggregationFunctions, filterOperator);
   }
 
-  /**
-   * Builds {@link AggregationInfo} for aggregations using star-tree index. Returns {@code null} if star-tree index
-   * cannot be used.
-   */
+  /// Builds [AggregationInfo] for aggregations using star-tree index. Returns `null` if star-tree index
+  /// cannot be used.
   @Nullable
   public static AggregationInfo buildAggregationInfoWithStarTree(SegmentContext segmentContext,
       QueryContext queryContext, AggregationFunction[] aggregationFunctions, @Nullable FilterContext filter,
       BaseFilterOperator filterOperator, List<Pair<Predicate, PredicateEvaluator>> predicateEvaluators) {
+    /// Star-tree stores pre-aggregated values per group key and cannot expand a row across multiple grouping
+    /// sets, so it cannot serve GROUP BY GROUPING SETS / ROLLUP / CUBE queries. Fall back to the regular path.
+    if (queryContext.isGroupingSets()) {
+      return null;
+    }
     if (!filterOperator.isResultEmpty()) {
       BaseProjectOperator<?> projectOperator =
           StarTreeUtils.createStarTreeBasedProjectOperator(segmentContext.getIndexSegment(), queryContext,
@@ -313,9 +350,7 @@ public class AggregationFunctionUtils {
     return null;
   }
 
-  /**
-   * Builds {@link AggregationInfo} for aggregations without using star-tree index.
-   */
+  /// Builds [AggregationInfo] for aggregations without using star-tree index.
   public static AggregationInfo buildAggregationInfoWithoutStarTree(SegmentContext segmentContext,
       QueryContext queryContext, AggregationFunction[] aggregationFunctions, BaseFilterOperator filterOperator) {
     Set<ExpressionContext> expressionsToTransform =
@@ -327,9 +362,7 @@ public class AggregationFunctionUtils {
     return new AggregationInfo(aggregationFunctions, projectOperator, false);
   }
 
-  /**
-   * Builds swim-lanes (list of {@link AggregationInfo}) for filtered aggregations.
-   */
+  /// Builds swim-lanes (list of [AggregationInfo]) for filtered aggregations.
   public static List<AggregationInfo> buildFilteredAggregationInfos(SegmentContext segmentContext,
       QueryContext queryContext) {
     assert queryContext.getAggregationFunctions() != null && queryContext.getFilteredAggregationFunctions() != null;
@@ -346,7 +379,7 @@ public class AggregationFunctionUtils {
       BaseProjectOperator<?> projectOperator =
           new ProjectPlanNode(segmentContext, queryContext, expressions, DocIdSetPlanNode.MAX_DOC_PER_CALL,
               mainFilterOperator).run();
-      return Collections.singletonList(new AggregationInfo(aggregationFunctions, projectOperator, false));
+      return List.of(new AggregationInfo(aggregationFunctions, projectOperator, false));
     }
 
     // For each aggregation function, check if the aggregation function is a filtered aggregate. If so, populate the
